modified the map to work eith the new teams